5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1723_2499.log
== TEST (2019-05-09 11:13:46) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n>k):
	e = e + 1/factorial(n)
	n = n+1
	print(e+ 1/factorial(n))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:14:39) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n>k):
	e = e + 1/factorial(n)
	n = n+1
print(e)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:14:46) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n>k):
	e = e + 1/factorial(n)
	n = n+1
print(e)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:15:15) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n>k):
	e = e + 1/factorial(n)
	n = n+1
print(e)
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:15:31) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n<=k):
	e = e + 1/factorial(n)
	n = n+1
print(e)
	
-- OUTPUT:
2.7182539682539684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:17:25) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n<=k):
	e = e + 1/factorial(n)
	n = n+1
print(e)
	
-- OUTPUT:
2.7182539682539684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:18:10) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n<=k):
	e = e + 1/factorial(n)
	n = n+1
print(round(e, 8))
	
-- EXECUTION TIME:
0.149756
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:18:53) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 0
e = 1
while(n<=k):
	e = e + 1/factorial(n)
	n = n+1
print(round(e, 8))
	
-- OUTPUT:
3.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:20:49) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 
e = 1
while(n<k):
	e = e + 1/factorial(n)
	n = n+1
print(round(e, 8))
	
-- ERROR:
File "XXXX", line 3
    n = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:20:58) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n<k):
	e = e + 1/factorial(n)
	n = n+1
print(round(e, 8))
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:21:06) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n<k):
	e = e + 1/factorial(n)
	n = n+1
print(round(e, 8))
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:21:16) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n<k):
	e = e + 1/factorial(n)
	n = n+1
print(round(e, 8))
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:21:23) 
-- CODE:
from math import*
k = float(input("numero: "))
n = 1
e = 1
while(n<k):
	e = e + 1/factorial(n)
	n = n+1
print(round(e, 8))
	
-- EXECUTION TIME:
0.147615
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
